# sova-sentinel

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md
crates/client/: Cargo.toml  build.rs
crates/client/examples/: client.rs
crates/client/src/: lib.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs
crates/proto/src/proto/: health.proto  slot_lock.proto
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/server/src/db/: migrations.rs  mod.rs
crates/server/src/service/: bitcoin.rs  health.rs  mod.rs  slot_lock.rs
docs/: design.md
