[package]
name = "sova-sentinel-client"
version = "0.1.4"
edition = "2021"

[dependencies]
sova-sentinel-proto = { path = "../proto" }
tonic = "0.12.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.13.4"

[[example]]
name = "client"
path = "examples/client.rs"

[build-dependencies]
tonic-build = "0.12.3"