[package]
name = "sova-sentinel-server"
version = "0.1.4"
edition = "2021"

[dependencies]
sova-sentinel-proto = { path = "../proto" }
tonic = "0.12.3"
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
anyhow = "1.0"
dotenv = "0.15"
hyper = { version = "1.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.5.2"
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bitcoincore-rpc = "0.19.0"
bitcoin = "0.32.5"
futures = "0.3"
hex = "0.4"
async-trait = "0.1"
tokio-retry = "0.3"
thiserror = "2.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
